main/default/objects/Opportunity_Location__c/fields/Current_LD_Provider__c.field-meta.xml
<CustomField>
    <fullName>Current_LD_Provider__c</fullName>
    <label>Current LD Provider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>