main/default/objects/Opportunity_Location__c/fields/Current_Provider_Local__c.field-meta.xml
<CustomField>
    <fullName>Current_Provider_Local__c</fullName>
    <label>Current Provider Local</label>
    <length>100</length>
    <type>Text</type>
</CustomField>