main/default/objects/Opportunity_Location__c/fields/MRC_Total__c.field-meta.xml
<CustomField>
    <fullName>MRC_Total__c</fullName>
    <label>MRC Total</label>
    <summarizedField>OpportunityLocationConfiguration__c.MRC_Total__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLocationConfiguration__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLocationConfiguration__c.Opportunity_Location__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>