main/default/objects/Opportunity_Location__c/fields/On_Hold__c.field-meta.xml
<CustomField>
    <fullName>On_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggles whether a location is on hold.</description>
    <inlineHelpText>Toggles whether a location is on hold.</inlineHelpText>
    <label>On Hold</label>
    <type>Checkbox</type>
</CustomField>