main/default/objects/Opportunity_Location__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Opportunity Locations</relationshipLabel>
    <relationshipName>Opportunity_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>