main/default/objects/Opportunity_Location__c/fields/Service_Location__c.field-meta.xml
<CustomField>
    <fullName>Service_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Location</label>
    <referenceTo>Service_Location__c</referenceTo>
    <relationshipLabel>Opportunity Locations</relationshipLabel>
    <relationshipName>Opportunity_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>