main/default/objects/Opportunity_Location__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-sale</fullName>
                <default>true</default>
                <label>Pre-sale</label>
            </value>
            <value>
                <fullName>AE - in process</fullName>
            </value>
            <value>
                <fullName>SE - in process</fullName>
            </value>
            <value>
                <fullName>SM - in process</fullName>
            </value>
            <value>
                <fullName>SS - in process</fullName>
            </value>
            <value>
                <fullName>SS - complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>