main/default/objects/Opportunity_Location__c/fields/Turndown_Total__c.field-meta.xml
<CustomField>
    <fullName>Turndown_Total__c</fullName>
    <label>Turndown Total</label>
    <summarizedField>Disconnect_Line_Item__c.MRC__c</summarizedField>
    <summaryForeignKey>Disconnect_Line_Item__c.Opportunity_Location__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>