main/default/objects/Opportunity_Location__c/validationRules/CLLI_required_to_create_Opp_Location.validationRule-meta.xml
<ValidationRule>
    <fullName>CLLI_required_to_create_Opp_Location</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( 00NC0000005Hr3V.00NC0000005HpbA ) &amp;&amp;
ISBLANK ( 00NC0000005Hr3V.00NC0000005HpbF )</errorConditionFormula>
    <errorMessage>Account must have a CLLI to create a Location</errorMessage>
</ValidationRule>